# ai-race-engineer-platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile  alembic.ini  config.py  database.py  entrypoint.sh  log_config.json  main.py  pyproject.toml  ws.py
backend/ai/: __init__.py  base.py  claude.py  mock.py  ollama.py  openai.py
backend/migrations/: env.py
backend/migrations/versions/: a1b2c3d4e5f6_init_tables.py
backend/models/: __init__.py  lap.py  session.py
backend/routers/: incidents.py  laps.py  sessions.py
backend/schemas/: incident.py  lap.py  session.py
backend/tests/: conftest.py  test_health.py  test_incident_analyst.py  test_incidents_endpoint.py  test_ollama_provider.py  test_sessions.py  test_websocket.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ConnectionStatus.tsx  IncidentAnalysis.tsx  IncidentPanel.tsx  LapDashboard.tsx  LapTimeline.tsx  Layout.tsx  SessionSidebar.tsx
frontend/src/context/: WebSocketContext.tsx
infra/k8s/: README.md
infra/terraform/: cd_iam.tf  ecs.tf  main.tf  outputs.tf  rds.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf
monitoring/: README.md  alert-rules.yaml  backend-servicemonitor.yaml  kube-prometheus-stack-values.yaml  loki-datasource.yaml  loki-values.yaml  promtail-values.yaml
monitoring/dashboards/: backend-logs.json  backend.json
telemetry-agent/: ac_telemetry.py  agent.py  pyproject.toml
(+36 files in other folders)
